@@ -1,1 +1,0 @@
-testng -d client-output -slave %1 %2 %3
